--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
+Library/
+Temp/
+obj/
+build/
+builds/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
